--- a/packages/frontend/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/frontend/editor-ui/src/plugins/i18n/locales/en.json
@@ -13,7 +13,7 @@
 			}
 		},
 		"name": "Name",
-		"save": "Save",
+		"Salvar": "Salvar",
 		"dismiss": "Dismiss",
 		"unlimited": "Unlimited",
 		"activate": "Activate",
@@ -36,7 +36,7 @@
 	"generic.close": "Close",
 	"generic.confirm": "Confirm",
 	"generic.create": "Create",
-	"generic.create.workflow": "Create Workflow",
+	"generic.create.workflow": "Criar Fluxo",
 	"generic.deleteWorkflowError": "Problem deleting workflow",
 	"generic.archiveWorkflowError": "Problem archiving workflow",
 	"generic.unarchiveWorkflowError": "Problem unarchiving workflow",
@@ -77,7 +77,7 @@
 	"generic.dismiss": "Dismiss",
 	"generic.unsavedWork.confirmMessage.headline": "Save changes before leaving?",
 	"generic.unsavedWork.confirmMessage.message": "If you don't save, you will lose your changes.",
-	"generic.unsavedWork.confirmMessage.confirmButtonText": "Save",
+	"generic.unsavedWork.confirmMessage.confirmButtonText": "Salvar",
 	"generic.unsavedWork.confirmMessage.cancelButtonText": "Leave without saving",
 	"generic.upgrade": "Upgrade",
 	"generic.upgradeNow": "Upgrade now",
@@ -640,7 +640,7 @@
 	"credentials.empty.heading": "{name}, let's set up a credential",
 	"credentials.empty.heading.userNotSetup": "Set up a credential",
 	"credentials.empty.description": "Credentials let workflows interact with your apps and services",
-	"credentials.empty.button": "Add first credential",
+	"credentials.empty.button": "Adicionar primeira credencial",
 	"credentials.empty.button.disabled.tooltip": "Your current role in the project does not allow you to create credentials",
 	"credentials.item.open": "Open",
 	"credentials.item.delete": "Delete",
@@ -733,7 +733,7 @@
 	"executionDetails.startingSoon": "Starting soon",
 	"executionDetails.workflow": "workflow",
 	"executionsLandingPage.emptyState.noTrigger.heading": "Set up the first step. Then execute your workflow",
-	"executionsLandingPage.emptyState.noTrigger.buttonText": "Add first step...",
+	"executionsLandingPage.emptyState.noTrigger.buttonText": "Adicionar primeira execução...",
 	"executionsLandingPage.clickExecutionMessage": "Click on an execution from the list to view it",
 	"executionsLandingPage.emptyState.heading": "Nothing here yet",
 	"executionsLandingPage.emptyState.message": "New workflow executions will show here",
@@ -1012,7 +1012,7 @@
 	"logs.overview.header.actions.clearExecution.tooltip": "Clear execution data",
 	"logs.overview.header.switch.details": "Details",
 	"logs.overview.header.switch.overview": "Overview",
-	"logs.overview.body.empty.message": "Nothing to display yet. Execute the workflow to see execution logs.",
+	"logs.overview.body.empty.message": "Nenhum log disponível",
 	"logs.overview.body.empty.action": "Execute the workflow",
 	"logs.overview.body.summaryText.for": "{status} for {time}",
 	"logs.overview.body.summaryText.in": "{status} in {time}",
@@ -1176,7 +1176,7 @@
 	"ndv.pinData.unpinAndExecute.confirm": "Unpin and test",
 	"ndv.pinData.beforeClosing.title": "Save output changes before closing?",
 	"ndv.pinData.beforeClosing.cancel": "Discard",
-	"ndv.pinData.beforeClosing.confirm": "Save",
+	"ndv.pinData.beforeClosing.confirm": "Salvar",
 	"ndv.pinData.error.syntaxError.title": "Unable to save due to invalid JSON",
 	"ndv.pinData.error.tooLarge.title": "Unable to pin data due to size limit",
 	"ndv.pinData.error.tooLarge.description": "Workflow has reached the maximum allowed pinned data size ({size} mb / {limit} mb)",
@@ -1822,7 +1822,7 @@
 	"runData.pindata.learnMore": "Learn more",
 	"runData.pindata.thisDataIsPinned": "This data is pinned.",
 	"runData.pindata.unpin": "Unpin",
-	"runData.editor.save": "Save",
+	"runData.editor.save": "Salvar",
 	"runData.editor.cancel": "Cancel",
 	"runData.editor.copyDataInfo": "You can copy data from previous executions and paste it above.",
 	"runData.aiContentBlock.startedAt": "Started at {startTime}",
@@ -1889,7 +1889,7 @@
 	"settings.personal.personalSettings": "Personal Settings",
 	"settings.personal.personalSettingsUpdated": "Personal details updated",
 	"settings.personal.personalSettingsUpdatedError": "Problem updating your details",
-	"settings.personal.save": "Save",
+	"settings.personal.save": "Salvar",
 	"settings.personal.security": "Security",
 	"settings.signup.signUpInviterInfo": "{firstName} {lastName} has invited you to n8n",
 	"settings.users": "Users",
@@ -2038,7 +2038,7 @@
 	"settings.api.view.modal.title.create": "Create API Key",
 	"settings.api.view.modal.title.edit": "Edit API Key",
 	"settings.api.view.modal.done.button": "Done",
-	"settings.api.view.modal.save.button": "Save",
+	"settings.api.view.modal.save.button": "Salvar",
 	"settings.api.scopes.placeholder": "Select",
 	"settings.api.scopes.selectAll": "Select All",
 	"settings.api.scopes.label": "Scopes",
@@ -2085,7 +2085,7 @@
 	"settings.externalSecrets.provider.title": "Commit and push changes",
 	"settings.externalSecrets.provider.description": "Select the files you want to stage in your commit and add a commit message. ",
 	"settings.externalSecrets.provider.buttons.cancel": "Cancel",
-	"settings.externalSecrets.provider.buttons.save": "Save",
+	"settings.externalSecrets.provider.buttons.save": "Salvar",
 	"settings.externalSecrets.provider.buttons.saving": "Saving",
 	"settings.externalSecrets.card.connectedSwitch.title": "Enable {provider}",
 	"settings.externalSecrets.provider.save.success.title": "Provider settings saved successfully",
@@ -2349,8 +2349,8 @@
 	"workflowActivator.workflowIsActive": "Workflow is already active",
 	"workflowActivator.activateWorkflow": "Activate workflow",
 	"workflowActivator.deactivateWorkflow": "Deactivate workflow",
-	"workflowActivator.active": "Active",
-	"workflowActivator.inactive": "Inactive",
+	"workflowActivator.active": "Ativo",
+	"workflowActivator.inactive": "Inativo",
 	"workflowActivator.showError.title": "Workflow could not be {newStateName}",
 	"workflowActivator.showMessage.activeChangedNodesIssuesExistTrue.message": "Please resolve outstanding issues before you activate it",
 	"workflowActivator.showMessage.activeChangedNodesIssuesExistTrue.title": "Problem activating workflow",
@@ -2364,12 +2364,12 @@
 	"workflowActivator.thisWorkflowHasNoTriggerNodes": "This workflow has no trigger nodes that require activation",
 	"workflowActivator.thisWorkflowIsArchived": "This workflow is archived so it cannot be activated",
 	"workflowActivator.thisWorkflowHasOnlyOneExecuteWorkflowTriggerNode": "'Execute Workflow Trigger' doesn't require activation as it is triggered by another workflow",
-	"workflowDetails.share": "Share",
-	"workflowDetails.active": "Active",
+	"workflowDetails.share": "Compartilhar",
+	"workflowDetails.active": "Ativo",
 	"workflowDetails.addTag": "Add tag",
 	"workflowDetails.chooseOrCreateATag": "Choose or create a tag",
 	"workflowHelpers.showMessage.title": "Problem saving workflow",
-	"workflowOpen.active": "Active",
+	"workflowOpen.active": "Ativo",
 	"workflowOpen.couldNotLoadActiveWorkflows": "Could not load active workflows",
 	"workflowOpen.created": "Created",
 	"workflowOpen.filterWorkflows": "Filter by tags",
@@ -2508,7 +2508,7 @@
 	"workflows.filters.tags": "Tags",
 	"workflows.filters.status": "Status",
 	"workflows.filters.status.all": "All",
-	"workflows.filters.status.active": "Active",
+	"workflows.filters.status.active": "Ativo",
 	"workflows.filters.status.deactivated": "Deactivated",
 	"workflows.filters.showArchived": "Show archived workflows",
 	"workflows.filters.ownedBy": "Owned by",
@@ -2522,15 +2522,15 @@
 	"workflows.sort.lastCreated": "Sort by last created",
 	"workflows.sort.nameAsc": "Sort by name (A-Z)",
 	"workflows.sort.nameDesc": "Sort by name (Z-A)",
-	"workflows.noResults": "No workflows found",
+	"workflows.noResults": "Nenhum fluxo encontrado",
 	"workflows.noResults.withSearch.switchToShared.preamble": "some workflows may be",
 	"workflows.noResults.withSearch.switchToShared.link": "hidden",
-	"workflows.empty.heading": "👋 Welcome {name}!",
-	"workflows.empty.heading.userNotSetup": "👋 Welcome!",
-	"workflows.empty.description": "Create your first workflow",
+	"workflows.empty.heading": "👋 Bem-vindo {name}!",
+	"workflows.empty.heading.userNotSetup": "👋 Bem-vindo(a)!",
+	"workflows.empty.description": "Crie seu primeiro fluxo",
 	"workflows.empty.description.readOnlyEnv": "No workflows here yet",
 	"workflows.empty.description.noPermission": "There are currently no workflows to view",
-	"workflows.empty.startFromScratch": "Start from scratch",
+	"workflows.empty.startFromScratch": "Criar novo",
 	"workflows.empty.browseTemplates": "Explore workflow templates",
 	"workflows.empty.learnN8n": "Learn n8n",
 	"workflows.empty.button.disabled.tooltip": "Your current role in the project does not allow you to create workflows",
@@ -2551,9 +2551,9 @@
 	"workflows.shareModal.onSave.error.title": "There was a problem saving sharing settings",
 	"workflows.shareModal.saveBeforeClose.title": "Save sharing changes?",
 	"workflows.shareModal.saveBeforeClose.message": "You have unsaved changes. Do you want to save them before closing?",
-	"workflows.shareModal.saveBeforeClose.confirmButtonText": "Save",
+	"workflows.shareModal.saveBeforeClose.confirmButtonText": "Salvar",
 	"workflows.shareModal.saveBeforeClose.cancelButtonText": "Close without saving",
-	"workflows.shareModal.save": "Save",
+	"workflows.shareModal.save": "Salvar",
 	"workflows.shareModal.changesHint": "You made changes",
 	"workflows.shareModal.info.sharee": "Only {workflowOwnerName} or users with workflow sharing permission can change who this workflow is shared with",
 	"workflows.shareModal.info.sharee.fallback": "the owner",
@@ -2606,7 +2606,7 @@
 	"variables.editing.value.placeholder": "Enter a value",
 	"variables.editing.key.error.startsWithLetter": "This field may only start with a letter",
 	"variables.editing.key.error.jsonKey": "This field may contain only letters, numbers, and underscores",
-	"variables.row.button.save": "Save",
+	"variables.row.button.save": "Salvar",
 	"variables.row.button.cancel": "Cancel",
 	"variables.row.button.edit": "Edit",
 	"variables.row.button.edit.onlyRoleCanEdit": "Only instance owner and admins can edit variables",
@@ -2768,17 +2768,17 @@
 	"settings.mfa.title": "Multi-factor Authentication",
 	"settings.mfa.updateConfiguration": "MFA configuration updated",
 	"settings.mfa.invalidAuthenticatorCode": "Invalid authenticator code",
-	"projects.header.overview.subtitle": "All the workflows, credentials and executions you have access to",
+	"projects.header.overview.subtitle": "Todos os fluxos de trabalho, credenciais e execuções aos quais você tem acesso",
 	"projects.header.shared.title": "Shared with you",
 	"projects.header.personal.subtitle": "Workflows and credentials owned by you",
 	"projects.header.shared.subtitle": "Workflows and credentials other users have shared with you",
-	"projects.header.create.workflow": "Create Workflow",
+	"projects.header.create.workflow": "Criar Fluxo",
 	"projects.header.create.credential": "Create Credential",
 	"projects.header.create.folder": "Create Folder",
 	"projects.create": "Create",
 	"projects.create.personal": "Create in personal",
 	"projects.create.team": "Create in project",
-	"projects.menu.overview": "Overview",
+	"projects.menu.overview": "Visão geral",
 	"projects.menu.shared": "Shared with you",
 	"projects.menu.title": "Projects",
 	"projects.menu.personal": "Personal",
